--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,197 @@
 /* Add your CSS to this file */
 body {
     margin: 0;
-    font-size: 16px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sansserif;
+    font-size: 18px;
 }
 
-.container {
+.container{
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
 }
+
+header{
+    background-color: white;
+}
+
+header.container{
+    margin: 1px;
+   /* display:grid;
+    grid-gap: 20px;*/
+}
+
+header .container h1 {
+    /*grid-column: 1/5;
+    padding: 20px;
+    display: inline-flex;
+    grid-row: 1;*/
+    justify-content: start;
+    font-size: 18px;
+ }
+
+header .container nav {
+     /*grid-column: 5/5;
+     grid-row: 1;
+     justify-content: flex-end;*/
+     padding: 18px;
+ }
+
+
+.card img {
+    height: 150px;
+    width: 200px;
+}
+footer{
+    background-color:#4A5568;
+    margin-bottom: -20%;
+    padding: 19px;
+    padding-left: 100px;
+}
+footer p{
+    color: white;
+}
+.newsletter {
+    background-color: #48BB78;
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+.newsletter .container{
+    text-align: center;
+}
+.form-group{
+    /*display: inline;*/
+    padding: 38px;
+}
+.newsletter P {
+   /* display: flex;*/
+    text-align: center;
+    color: white;
+}
+.newsletter .btn {
+    background-color: #5A67D8;
+
+ }
+
+.stories img {
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+   
+}
+
+.stories h3 {
+    text-size-adjust: 18px;
+    color: #5A67B8;
+}
+
+.stories p a {
+    color: #5A67B8;
+}
+
+article{
+    padding:20px;
+    /*display: grid;
+    grid-template-columns: 5;
+    grid-template-rows: 2;*/
+}
+article.stories img{
+    /*grid-row: 1/2;
+    grid-column: 1/5;*/
+}
+.article-body{
+    /*grid-row: 1/2;
+    grid-column: 5/5;*/
+}
+
+.testing {
+    
+    background-color: #4A5568;
+}
+
+.testing p {
+    color: white;
+}
+.testing.container{
+    margin: 1;
+    /*display: grid;
+    grid-gap: 19px;
+    grid-template-rows: 1;
+    grid-template-columns: 3;*/
+}
+.testing .btn {
+   /* grid-column: 4/4;
+    grid-row: 1/1;*/
+    padding: 10px;
+    margin-bottom: 60px;
+    margin-top: 50px;
+    background-color: #48BB78;
+    border-radius: 5px;
+}
+.testing-desciption{
+    float: left;
+}
+
+nav ul li {
+  
+    color:#6b7280;
+    list-style-type:none;
+    font-size:18px;
+    justify-content:center;
+    width: 100px;
+    float:left;
+    margin: 9px;
+   /* display:inline;*/
+  }
+nav ul{
+    float: inline-end;
+    display:inline-flex;
+}
+nav a:hover{
+    color: #5A67D8;
+}
+
+.learn-about h2 {
+    text-size-adjust: 24px;
+    color: #48BB78;
+}
+
+.learn-about.container.card {
+    border-color: #E2E8F0;
+    border-radius: 5px;
+    margin: 20px;
+    /*display: inline;*/
+    box-shadow: 2px 1px 2px 1px;
+}
+.learn-about.container.cards{
+   /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;*/
+}
+.learn-about .card-body{
+    padding: 0px 20px 20px;
+}
+.learn-about h3 {
+    color: #48BB78;
+    font-size: 21px;
+}
+.overview-hero {
+    background-color: #E2E8F0;
+}
+.overview-hero-image img {
+    height: 200px;
+    width: 200px;
+    /*grid-column: 1/5;*/
+    max-width: 100%;
+    padding-top: 22px;
+    padding-bottom: 20px;
+}
+/*.overview-hero .container {
+    display: inline-flex;
+    margin: 1px;
+    display: grid;
+    grid-gap: 19px;
+}
+.overview-hero-text {
+    grid-column: 5/5;
+    padding: 18px;
+}*/
