--- a/styles.css
+++ b/styles.css
@@ -10,38 +10,56 @@ body {
     max-width: 960px;
     width: 100%;
 }
-
+/*Header*/
 header{
     background-color: white;
 }
 
 header.container{
-    margin: 1px;
-   /* display:grid;
+    margin: 0;
+    /*display:grid;
     grid-gap: 20px;*/
 }
 
 header .container h1 {
     /*grid-column: 1/5;
-    padding: 20px;
     display: inline-flex;
     grid-row: 1;*/
+    padding: 20px;
     justify-content: start;
     font-size: 18px;
  }
 
 header .container nav {
      /*grid-column: 5/5;
-     grid-row: 1;
-     justify-content: flex-end;*/
+     grid-row: 1;*/
+     justify-content: flex-end;
      padding: 18px;
  }
-
+ nav ul li {
+  
+    color:#6b7280;
+    list-style-type:none;
+    font-size:18px;
+    justify-content:center;
+    width: 100px;
+    float:inline-end;
+    margin: 9px;
+    display:inline;
+  }
+nav ul{
+    float: right;
+    display:inline-flex;
+}
+nav a:hover{
+    color: #5A67D8;
+}
 
 .card img {
     height: 150px;
     width: 200px;
 }
+/*Footer*/
 footer{
     background-color:#4A5568;
     margin-bottom: -20%;
@@ -51,6 +69,7 @@ footer{
 footer p{
     color: white;
 }
+/*NewsLetter*/
 .newsletter {
     background-color: #48BB78;
     padding-top: 20px;
@@ -72,14 +91,7 @@ footer p{
     background-color: #5A67D8;
 
  }
-
-.stories img {
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-   
-}
-
+/*Recent Stories*/
 .stories h3 {
     text-size-adjust: 18px;
     color: #5A67B8;
@@ -89,6 +101,13 @@ footer p{
     color: #5A67B8;
 }
 
+.stories img {
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+   
+}
+
 article{
     padding:20px;
     /*display: grid;
@@ -96,31 +115,31 @@ article{
     grid-template-rows: 2;*/
 }
 article.stories img{
-    /*grid-row: 1/2;
+   /*grid-row: 1/2;
     grid-column: 1/5;*/
 }
 .article-body{
     /*grid-row: 1/2;
     grid-column: 5/5;*/
 }
-
-.testing {
-    
+/*Covid-19 Testing Programme*/
+.testing{
     background-color: #4A5568;
-}
 
+}
+    
 .testing p {
     color: white;
 }
 .testing.container{
     margin: 1;
-    /*display: grid;
+   /* display: grid;
     grid-gap: 19px;
     grid-template-rows: 1;
     grid-template-columns: 3;*/
 }
 .testing .btn {
-   /* grid-column: 4/4;
+    /*grid-column: 4/4;
     grid-row: 1/1;*/
     padding: 10px;
     margin-bottom: 60px;
@@ -132,66 +151,53 @@ article.stories img{
     float: left;
 }
 
-nav ul li {
-  
-    color:#6b7280;
-    list-style-type:none;
-    font-size:18px;
-    justify-content:center;
-    width: 100px;
-    float:left;
-    margin: 9px;
-   /* display:inline;*/
-  }
-nav ul{
-    float: inline-end;
-    display:inline-flex;
-}
-nav a:hover{
-    color: #5A67D8;
-}
 
+/*Learn About*/
 .learn-about h2 {
     text-size-adjust: 24px;
     color: #48BB78;
 }
-
+/*.learn-about.container.cards{
+    display: grid;
+    grid-template-columns: 150px;
+}*/
 .learn-about.container.card {
     border-color: #E2E8F0;
     border-radius: 5px;
     margin: 20px;
-    /*display: inline;*/
-    box-shadow: 2px 1px 2px 1px;
+    /*display: inline;
+    box-shadow: 2px 1px 2px 1px;*/
 }
-.learn-about.container.cards{
-   /* display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;*/
-}
+
 .learn-about .card-body{
-    padding: 0px 20px 20px;
+    padding: 0px 20px 20px 20px;
 }
 .learn-about h3 {
     color: #48BB78;
     font-size: 21px;
 }
+/*Hero Overview*/
 .overview-hero {
     background-color: #E2E8F0;
 }
 .overview-hero-image img {
+    float: left;
     height: 200px;
     width: 200px;
-    /*grid-column: 1/5;*/
-    max-width: 100%;
+   /* grid-column: 1/5;
+    max-width: 100%;*/
     padding-top: 22px;
     padding-bottom: 20px;
 }
-/*.overview-hero .container {
-    display: inline-flex;
+.overview-hero .container {
+    /*display: inline-flex;
     margin: 1px;
     display: grid;
-    grid-gap: 19px;
+    grid-gap: 19px;*/
 }
 .overview-hero-text {
-    grid-column: 5/5;
+    /*grid-column: 5/5;*/
     padding: 18px;
-}*/
+    justify-content: center;
+
+}
