--- a/styles.css
+++ b/styles.css
@@ -13,53 +13,189 @@ body {
 /*Header*/
 header{
     background-color: white;
+    display: flex;
 }
 
-header.container{
-    margin: 0;
-    /*display:grid;
-    grid-gap: 20px;*/
+header .container{
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    
 }
 
-header .container h1 {
-    /*grid-column: 1/5;
-    display: inline-flex;
-    grid-row: 1;*/
-    padding: 20px;
-    justify-content: start;
+header h1 {
+
+    padding-right: 250px;
     font-size: 18px;
+    float: left;
  }
 
-header .container nav {
-     /*grid-column: 5/5;
-     grid-row: 1;*/
-     justify-content: flex-end;
-     padding: 18px;
- }
- nav ul li {
+
+ li a{
   
     color:#6b7280;
-    list-style-type:none;
-    font-size:18px;
-    justify-content:center;
-    width: 100px;
-    float:inline-end;
-    margin: 9px;
-    display:inline;
+    text-decoration:none;
+    padding:20px;   
   }
-nav ul{
-    float: right;
-    display:inline-flex;
+ul {
+
+    margin: 0;
+    padding: 0;
+    display:flex;
+   
+    justify-content: flex-end;
+    list-style: none;
 }
 nav a:hover{
     color: #5A67D8;
 }
-
-.card img {
-    height: 150px;
-    width: 200px;
+/*Hero Overview*/
+.overview-hero {
+    background-color: #E2E8F0;
 }
-/*Footer*/
+.overview-hero .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+
+}
+.overview-hero-image img {
+   
+    height: 140px;
+    width: 140px;
+    padding: 18px;
+    
+}
+.overview-hero-text {
+    width: 600px;
+   
+}
+
+/*Learn About*/
+.learn-about h2 {
+    text-size-adjust: 24px;
+    color: #48BB78;
+}
+.cards img {
+    height: 150px;
+    width: 180px;
+}
+.cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.card {
+    border-color: #E2E8F0;
+    border-radius: 5px;
+    margin: 20px;
+    display: inline;
+    box-shadow: 1px 1px 1px 1px;
+}
+.learn-about .card-body{
+    padding: 0px 20px 20px;
+}
+.learn-about h3 {
+    color: #48BB78;
+    font-size: 21px;
+}
+/*Covid-19 Testing Programme*/
+.testing{
+    background-color: #4A5568;
+    padding: 80px;
+
+}
+    
+.testing-desciption {
+    color: white;
+    width: 600px;
+    padding-left: 18px;
+    
+}
+
+.testing .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    }
+.cta .btn {
+    background-color: #48BB78;
+    border-radius: 5px;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+
+/*Recent Stories*/
+.stories h2{
+    color: #5A67B8;
+}
+.stories h3 {
+    text-size-adjust: 18px;
+    color: #5A67B8;
+}
+
+.stories p a {
+    color: #5A67B8;
+    text-decoration: none;
+}
+
+.stories img {
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    margin-right: 45px;
+}
+
+article{
+    padding:20px;
+    display: grid;
+    grid-template-columns: 5;
+    grid-template-rows: 2;
+}
+article.stories img{
+   grid-row: 1/2;
+    grid-column: 1/5;
+}
+.article-body{
+    grid-row: 1/2;
+    grid-column: 5/5;
+}
+/*NewsLetter*/
+.newsletter {
+    background-color: #48BB78;
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+.newsletter .container{
+    text-align: center;
+}
+.form-group{
+    display: inline;
+    padding: 38px;
+}
+.newsletter .h3{
+    text-align: center;
+}
+.newsletter .container {
+    display: -moz-inline-stack;
+    text-align: justify;
+    width: 500px;
+    color: white;
+}
+.newsletter .btn {
+    background-color: #5A67D8;
+    height:40px;
+    width: 170px;
+    padding-inline-end:  30px;
+ }
+ input{
+     height:35px;
+     width: 235px;
+     
+ }
+ /*Footer*/
 footer{
     background-color:#4A5568;
     margin-bottom: -20%;
@@ -68,136 +204,4 @@ footer{
 }
 footer p{
     color: white;
-}
-/*NewsLetter*/
-.newsletter {
-    background-color: #48BB78;
-    padding-top: 20px;
-    padding-bottom: 40px;
-}
-.newsletter .container{
-    text-align: center;
-}
-.form-group{
-    /*display: inline;*/
-    padding: 38px;
-}
-.newsletter P {
-   /* display: flex;*/
-    text-align: center;
-    color: white;
-}
-.newsletter .btn {
-    background-color: #5A67D8;
-
- }
-/*Recent Stories*/
-.stories h3 {
-    text-size-adjust: 18px;
-    color: #5A67B8;
-}
-
-.stories p a {
-    color: #5A67B8;
-}
-
-.stories img {
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-   
-}
-
-article{
-    padding:20px;
-    /*display: grid;
-    grid-template-columns: 5;
-    grid-template-rows: 2;*/
-}
-article.stories img{
-   /*grid-row: 1/2;
-    grid-column: 1/5;*/
-}
-.article-body{
-    /*grid-row: 1/2;
-    grid-column: 5/5;*/
-}
-/*Covid-19 Testing Programme*/
-.testing{
-    background-color: #4A5568;
-
-}
-    
-.testing p {
-    color: white;
-}
-.testing.container{
-    margin: 1;
-   /* display: grid;
-    grid-gap: 19px;
-    grid-template-rows: 1;
-    grid-template-columns: 3;*/
-}
-.testing .btn {
-    /*grid-column: 4/4;
-    grid-row: 1/1;*/
-    padding: 10px;
-    margin-bottom: 60px;
-    margin-top: 50px;
-    background-color: #48BB78;
-    border-radius: 5px;
-}
-.testing-desciption{
-    float: left;
-}
-
-
-/*Learn About*/
-.learn-about h2 {
-    text-size-adjust: 24px;
-    color: #48BB78;
-}
-/*.learn-about.container.cards{
-    display: grid;
-    grid-template-columns: 150px;
-}*/
-.learn-about.container.card {
-    border-color: #E2E8F0;
-    border-radius: 5px;
-    margin: 20px;
-    /*display: inline;
-    box-shadow: 2px 1px 2px 1px;*/
-}
-
-.learn-about .card-body{
-    padding: 0px 20px 20px 20px;
-}
-.learn-about h3 {
-    color: #48BB78;
-    font-size: 21px;
-}
-/*Hero Overview*/
-.overview-hero {
-    background-color: #E2E8F0;
-}
-.overview-hero-image img {
-    float: left;
-    height: 200px;
-    width: 200px;
-   /* grid-column: 1/5;
-    max-width: 100%;*/
-    padding-top: 22px;
-    padding-bottom: 20px;
-}
-.overview-hero .container {
-    /*display: inline-flex;
-    margin: 1px;
-    display: grid;
-    grid-gap: 19px;*/
-}
-.overview-hero-text {
-    /*grid-column: 5/5;*/
-    padding: 18px;
-    justify-content: center;
-
 }
